--- a/_posts/java/2015-11-10-cas-first.md
+++ b/_posts/java/2015-11-10-cas-first.md
@@ -37,7 +37,7 @@ CAS(Central Authentication Service)，中央认证服务，一种独立开始指
 {% highlight xml %}
 <bean id="ticketGrantingTicketCookieGenerator" class="org.jasig.cas.web.support.CookieRetrievingCookieGenerator"
           c:casCookieValueManager-ref="cookieValueManager"
-          p:cookieSecure="true" <!-- 此处将 true 改为 false -->
+          p:cookieSecure="true"
           p:cookieMaxAge="-1"
           p:cookieName="TGC"
           p:cookiePath=""/>
@@ -68,7 +68,7 @@ CAS(Central Authentication Service)，中央认证服务，一种独立开始指
 
 {% highlight xml %}
 <bean id="warnCookieGenerator" class="org.jasig.cas.web.support.CookieRetrievingCookieGenerator"
-          p:cookieSecure="false"
+          p:cookieSecure="false" <!-- 此处将 true 改为 false -->
           p:cookieMaxAge="-1"
           p:cookieName="CASPRIVACY"
           p:cookiePath=""/>
