--- a/_posts/java/2016-03-01-cas-first.md
+++ b/_posts/java/2016-03-01-cas-first.md
@@ -216,3 +216,7 @@ CAS(Central Authentication Service)，中央认证服务，一种独立开始指
 ```
 <%=request.getRemoteUser()%>
 ```
+
+["CAS单点登录与Shiro的集成"](integration-of-cas-and-shiro.html "CAS单点登录与Shiro的集成")
+
+["CAS单点登录密码加盐的认证"](cas-username-password-salt-authentication-handler.html "CAS单点登录密码加盐的认证")
