--- a/_posts/java/2016-03-01-cas-first.md
+++ b/_posts/java/2016-03-01-cas-first.md
@@ -220,3 +220,5 @@ CAS(Central Authentication Service)，中央认证服务，一种独立开始指
 ["CAS单点登录与Shiro的集成"](integration-of-cas-and-shiro.html "CAS单点登录与Shiro的集成")
 
 ["CAS单点登录密码加盐的认证"](cas-username-password-salt-authentication-handler.html "CAS单点登录密码加盐的认证")
+
+["CAS+Shiro实现单点退出"](cas-shiro-logout.html "CAS+Shiro实现单点退出")
