基于Redis的CAS服务端集群

--- a/_posts/java/2016-03-01-cas-first.md
+++ b/_posts/java/2016-03-01-cas-first.md
@@ -222,3 +222,5 @@ CAS(Central Authentication Service)，中央认证服务，一种独立开始指
 ["CAS单点登录密码加盐的认证"](cas-username-password-salt-authentication-handler.html "CAS单点登录密码加盐的认证")
 
 ["CAS+Shiro实现单点退出"](cas-shiro-logout.html "CAS+Shiro实现单点退出")
+
+["基于Redis的CAS服务端集群"](cluster-of-cas-server-by-redis.html "基于Redis的CAS服务端集群")
